# Destruction-Engine

./: Destruction Engine.sln  LICENSE  README.md
Destruction Engine/: .gitignore  BasicComponents.cpp  BasicComponents.h  BasicSystems.h  BasicSystems.hpp  CMakeLists.txt  Component.cpp  Component.h  ComponentArray.h  ComponentManager.h  Coordinator.cpp  Coordinator.h  Debug.cpp  Debug.h  Destruction Engine.vcxproj  Destruction Engine.vcxproj.filters  Entity.h  EntityManager.h  Event.h  EventBus.h  EventHandler.h  GridData.cpp  GridData.h  GridManager.cpp  GridManager.h  GridSystem.cpp  GridSystem.h  Input.h  Main.cpp  Maths.c  Maths.h  MemberFunctionHandler.h  Notes.txt  Old GridData.cpp  Outline.cpp  Outline.h  Outline.hpp  PathSystem.cpp  PathSystem.h  Progress.txt  (+12 more)
Destruction Engine/Testing/: PathfindingTest.cpp
Destruction Engine/assets/: Pathfinding.map
URSS-2025/: .clangd  .gitignore  BasicSystems.h  CMakeLists.txt  Component.cpp  Component.h  ComponentManager.h  Debug.cpp  GridData.cpp  GridData.h  GridManager.cpp  Input.h  Main.cpp  Maths.h  MemberFunctionHandler.h  Notes.txt  Outline.cpp  Progress.txt  Signature.h  System.cpp  System.h  SystemManager.h  TileSystem.h  point.h  polypartition.cpp
URSS-2025/assets/: MS.map  Pathfinding.map  Pathfinding2.map
